--- a/TodoList.WebApi/TodoList.WebApi.csproj
+++ b/TodoList.WebApi/TodoList.WebApi.csproj
@@ -8,6 +8,11 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper" Version="12.0.0" />
+        <PackageReference Include="GraphQL" Version="7.2.2" />
+        <PackageReference Include="GraphQL.Server.Authorization.AspNetCore" Version="7.2.0" />
+        <PackageReference Include="GraphQL.Server.Transports.AspNetCore.SystemTextJson" Version="5.2.1" />
+        <PackageReference Include="GraphQL.Server.Ui.Altair" Version="7.2.0" />
+        <PackageReference Include="GraphQL.SystemTextJson" Version="7.2.2" />
         <PackageReference Include="Microsoft.AspNet.WebApi.Versioning" Version="4.1.1" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
@@ -34,6 +39,12 @@
    
     <ItemGroup>
       <Compile Remove="Controllers\WeatherForecastController.cs" />
+    </ItemGroup>
+
+   
+    <ItemGroup>
+      <Folder Include="Graph\List" />
+      <Folder Include="Graph\TasksList" />
     </ItemGroup>
 
 </Project>
