mais alterações para adicioncar campos de relação com o idUser

--- a/TodoList.Repositories/TodoList.Repositories.csproj
+++ b/TodoList.Repositories/TodoList.Repositories.csproj
@@ -33,6 +33,7 @@
 
     <ItemGroup>
       <Compile Remove="Maps\**" />
+      <Compile Remove="Migrations\TodoListContextModelSnapshot.cs" />
     </ItemGroup>
 
     <ItemGroup>
