--- a/TodoList.Services/TodoList.Services.csproj
+++ b/TodoList.Services/TodoList.Services.csproj
@@ -16,10 +16,12 @@
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.17" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
       <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
     </ItemGroup>
 
@@ -32,6 +34,8 @@
       <Compile Remove="Interfaces\IBaseService.cs" />
       <Compile Remove="Services\ListTeste.cs" />
       <Compile Remove="Services\TesteList.cs" />
+      <Compile Remove="Models\User.cs" />
+      <Compile Remove="Models\UserAuth.cs" />
     </ItemGroup>
 
 </Project>
