--- a/TodoList.Services/TodoList.Services.csproj
+++ b/TodoList.Services/TodoList.Services.csproj
@@ -36,6 +36,7 @@
       <Compile Remove="Services\TesteList.cs" />
       <Compile Remove="Models\User.cs" />
       <Compile Remove="Models\UserAuth.cs" />
+      <Compile Remove="Interfaces\ITokenService.cs" />
     </ItemGroup>
 
 </Project>
