--- a/TodoList.WebApi/appsettings.json
+++ b/TodoList.WebApi/appsettings.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "TodoListContext": "Data Source=D:/home/site/wwwroot/Database/TodoList.db",
-    "DefaultConnection": "Data Source=D:/home/site/wwwroot/Database/TodoList.db"
+    //"DefaultConnection": "Data Source=D:/home/site/wwwroot/Database/TodoList.db"
+    "DefaultConnection": "Data Source=Database/TodoList.db"
   },
   "AllowedHosts": "*"
 }
