Changing database file

--- a/TodoList.WebApi/appsettings.json
+++ b/TodoList.WebApi/appsettings.json
@@ -6,9 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "TodoListContext": "Data Source=D:/home/site/wwwroot/Database/TodoList.db",
-    //"DefaultConnection": "Data Source=D:/home/site/wwwroot/Database/TodoList.db"
-    "DefaultConnection": "Data Source=Database/TodoList.db"
+    "DefaultConnection": "Data Source=D:/home/site/TodoList.db"
   },
   "AllowedHosts": "*"
 }
