--- a/TodoList.WebApi/appsettings.Development.json
+++ b/TodoList.WebApi/appsettings.Development.json
@@ -1,12 +1,14 @@
 {
+  "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=../Database/TodoList.db"
+    "DefaultConnection": "Data Source=../Data/TodoList.db"
   },
   "AllowedHosts": "*"
 }
