--- a/TodoList.WebApi/appsettings.json
+++ b/TodoList.WebApi/appsettings.json
@@ -2,11 +2,13 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=D:/home/site/TodoList.db"
+    "DefaultConnection": "Data Source=./Data/TodoList.db"
   },
+  
   "AllowedHosts": "*"
 }
