--- a/TodoList.Services/TodoList.Services.csproj
+++ b/TodoList.Services/TodoList.Services.csproj
@@ -21,6 +21,7 @@
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       </PackageReference>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
       <PackageReference Include="System.ServiceModel.Primitives" Version="4.10.0" />
     </ItemGroup>
