--- a/TodoList.Services/TodoList.Services.csproj
+++ b/TodoList.Services/TodoList.Services.csproj
@@ -14,6 +14,9 @@
     <ItemGroup>
       <PackageReference Include="AutoMapper" Version="12.0.0" />
       <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+      <PackageReference Include="Azure.Extensions.AspNetCore.Configuration.Secrets" Version="1.2.2" />
+      <PackageReference Include="Azure.Identity" Version="1.9.0" />
+      <PackageReference Include="Azure.Security.KeyVault.Secrets" Version="4.5.0" />
       <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0-beta.1" />
       <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.4.0" />
