--- a/TodoList.Repositories/TodoList.Repositories.csproj
+++ b/TodoList.Repositories/TodoList.Repositories.csproj
@@ -40,6 +40,8 @@
       <Compile Remove="Migrations\20230130133228_Initial.cs" />
       <Compile Remove="Migrations\20230130133228_Initial.Designer.cs" />
       <Compile Remove="Repositories\AuthenticatiorRepository.cs" />
+      <Compile Remove="Migrations\20230226011119_Initial.cs" />
+      <Compile Remove="Migrations\20230226011119_Initial.Designer.cs" />
     </ItemGroup>
 
     <ItemGroup>
