--- a/TodoList.Repositories/TodoList.Repositories.csproj
+++ b/TodoList.Repositories/TodoList.Repositories.csproj
@@ -7,10 +7,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Migrations" />
-    </ItemGroup>
-
-    <ItemGroup>
       <ProjectReference Include="..\TodoList.Domain\TodoList.Domain.csproj" />
     </ItemGroup>
 
@@ -34,20 +30,20 @@
 
     <ItemGroup>
       <Compile Remove="Maps\**" />
-      <Compile Remove="Migrations\TodoListContextModelSnapshot.cs" />
+      <Compile Remove="Migrations\**" />
       <Compile Remove="Abstractions\IAuthRepository.cs" />
       <Compile Remove="Abstractions\AuthRepository.cs" />
-      <Compile Remove="Migrations\20230130133228_Initial.cs" />
-      <Compile Remove="Migrations\20230130133228_Initial.Designer.cs" />
       <Compile Remove="Repositories\AuthenticatiorRepository.cs" />
     </ItemGroup>
 
     <ItemGroup>
       <EmbeddedResource Remove="Maps\**" />
+      <EmbeddedResource Remove="Migrations\**" />
     </ItemGroup>
 
     <ItemGroup>
       <None Remove="Maps\**" />
+      <None Remove="Migrations\**" />
     </ItemGroup>
 
 </Project>
